# HM_Formation

./: README.md
b2_formation_control/: CMakeLists.txt  package.xml
b2_formation_control/config/: topology.ini
b2_formation_control/include/: avoidance.h  b2_util.h  common_include.h  formation.h  formation_controller.h  goal.h  move_robot.hpp  tic_toc.hpp
b2_formation_control/launch/: through_corridor.launch
b2_formation_control/src/: avoidance.cpp  b2_util.cpp  formation.cpp  formation_controller.cpp  formation_move.cpp  goal.cpp  keyboard.cpp  move_robot.cpp  through_corridor.cpp
scene_loading/: CMakeLists.txt  README.md  package.xml
scene_loading/launch/: b2_corridor.launch  b2_empty.launch  b2_obstacle.launch  robot_spawn.launch  robot_spawn_dynamic.launch  sample_robot_spawn.launch  warehouse_3.launch
scene_loading/launch/include/: sample_xbot-u.launch.xml  xbot-u.launch.xml
scene_loading/models/ISCAS_Museum/: model.sdf
scene_loading/models/ISCAS_groundplane/: model.config  model.sdf
scene_loading/models/SampleScene/: model.config  model.sdf
scene_loading/models/meshes/: base_link.mtl  pitch_platform.mtl  realsense.mtl  rplidar.mtl  wheel.mtl  xtion_pro_camera.mtl  (+1 more)
scene_loading/scripts/: robot_keyboard_teleop.py
scene_loading/urdf/: robot.xacro  robot_dae.xacro  sick_tim.urdf.xacro  sick_tim_dae.urdf.xacro  target.sdf  xbot-u.gazebo  xbot-u.urdf.xacro  xbot-u.urdf_dae.xacro
scene_loading/worlds/: ROS-Academy-dynamic.world  ROS-Academy.world  corridor.world  empty.world  obstacle.world  sai_di.world  sample.world  warehouse.world
(+9 files in other folders)
